--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-allennlp=0.8.1=pypi_0
-ekphrasis=0.5.1=pypi_0
-emoji=0.4.5=pypi_0
+allennlp=0.8.1
+ekphrasis=0.5.1
+emoji=0.4.5
 pytorch=1.0.1
-pytorch-pretrained-bert=0.4.0
+pytorch-pretrained-bert<0.4.0
+tqdm>4.0.0
+python>3.6.1
